# base64_codec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
example/: CMakeLists.txt  example.cpp
include/: base64.h  base64_impl.h
src/: CMakeLists.txt  base64.cpp
test/: CMakeLists.txt  test.cpp
